# pnlcalculator

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  pnl_calculator
src/: csv_parser.cpp  csv_parser.h  main.cpp  pnl_calculator.cpp  pnl_calculator.h  position.cpp  position.h  trade.cpp  trade.h
